--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.0.3",
     "@heroicons/react": "^2.1.1",
     "@vercel/analytics": "^1.2.2",
     "moment": "^2.30.1",
